<resources>
    <string name="app_name">Grocery Run</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_note">Note</string>
    <string name="add_item">Add Item</string>
    <string name="multiautocompletetextview">MultiAutoCompleteTextView</string>
    <string name="gotonotes">Go to Notes</string>

    // note activity xml
    <string name="checkout">Check out</string>
    <string name="total">Total: $0.00</string>
    <string name="additem">Add item</string>
    <string name="enteritem">Enter item</string>
    <string name="x">x</string>
    <string name="quantity">Quantity</string>
    <string name="mylist">My List</string>

    <string name="gotomaps">Go to Maps</string>
    <string name="map_key"  translatable="false">AIzaSyCb1NTO_9C7KVvqnhhHxp5Gi7kwja6949I</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
